--- a/BinTree.ipynb
+++ b/BinTree.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import"
+    "from bintrees import BinaryTree\n",
+    "from bintrees import AVLTree\n",
+    "from bintrees import RBTree"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
