--- a/BinTree.ipynb
+++ b/BinTree.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bintrees import BinaryTree\n",
     "from bintrees import AVLTree\n",
-    "from bintrees import RBTree"
+    "from bintrees import *\n",
+    "from abc import abstractmethod, abstractproperty"
    ]
   },
   {
@@ -22,42 +23,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t.insert(3,3)\n",
-    "t.insert(1,1)\n",
-    "t.insert(2,2)\n",
-    "t.insert(1,4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "10"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "t.clear()\n",
+    "t.insert(5,5)\n",
+    "t.insert(6,6)\n",
+    "t.insert(9,9)\n",
+    "t.insert(8,8)\n",
+    "t.insert(10,10)\n",
+    "t.insert(7,7)\n",
+    "t.insert(4,4)\n",
+    "t.insert(1,1)\n",
+    "t.insert(3,3)\n",
+    "t.insert(2,2)\n",
     "t.count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function abc.abstractmethod(funcobj)>"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.floor_item(1)"
+   ]
   }
  ],
  "metadata": {
