--- a/BinTree.ipynb
+++ b/BinTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
     "\t\t\t\tcur_node.right_child.parent=cur_node # set parent\n",
     "\t\t\telse:\n",
     "\t\t\t\tself._insert(value,cur_node.right_child)\n",
-    "\t\telse:\n",
-    "\t\t\tprint(\"Value already in tree!\")\n",
+    "\t\t#else:\n",
+    "\t\t\t##print(\"Value already in tree!\")\n",
     "\n",
     "\tdef print_tree(self):\n",
     "\t\tif self.root!=None:\n",
@@ -181,33 +181,499 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 트리 생성 시간:  0.003790140151977539\n",
+      "1 번째 트리 높이:  20\n",
+      "1 - 1 번째 탐색, 찾는 숫자 1292 탐색+삭제 시간: 0.0009317398071289062\n",
+      "1 - 2 번째 탐색, 찾는 숫자 69074 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 84538 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 1220 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 59288 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  0.005984067916870117\n",
+      "2 번째 트리 높이:  23\n",
+      "2 - 1 번째 탐색, 찾는 숫자 1867 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 96555 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 87625 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 20711 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 39046 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  0.005023956298828125\n",
+      "3 번째 트리 높이:  25\n",
+      "3 - 1 번째 탐색, 찾는 숫자 21859 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 88877 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 69453 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 85349 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 68382 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  0.006982326507568359\n",
+      "4 번째 트리 높이:  25\n",
+      "4 - 1 번째 탐색, 찾는 숫자 64575 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 65445 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 25640 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 53407 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 41181 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  0.0060117244720458984\n",
+      "5 번째 트리 높이:  26\n",
+      "5 - 1 번째 탐색, 찾는 숫자 71387 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 89199 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 64159 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 82253 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 43101 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  0.0060198307037353516\n",
+      "6 번째 트리 높이:  26\n",
+      "6 - 1 번째 탐색, 찾는 숫자 81399 탐색+삭제 시간: 0.0009930133819580078\n",
+      "6 - 2 번째 탐색, 찾는 숫자 59373 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 73100 탐색+삭제 시간: 0.0\n",
+      "Node to be deleted not found in the tree!\n",
+      "6 - 4 번째 탐색, 찾는 숫자 73100 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 22735 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  0.008012056350708008\n",
+      "7 번째 트리 높이:  27\n",
+      "7 - 1 번째 탐색, 찾는 숫자 25935 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 78397 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 47550 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 50413 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 51720 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  0.006189823150634766\n",
+      "8 번째 트리 높이:  28\n",
+      "8 - 1 번째 탐색, 찾는 숫자 46125 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 75595 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 1106 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 85779 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 82930 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "9 번째 트리 생성 시간:  0.0\n",
+      "9 번째 트리 높이:  28\n",
+      "9 - 1 번째 탐색, 찾는 숫자 52259 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 7992 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 87655 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 71584 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 8634 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  0.0\n",
+      "10 번째 트리 높이:  28\n",
+      "10 - 1 번째 탐색, 찾는 숫자 94970 탐색+삭제 시간: 0.015591621398925781\n",
+      "10 - 2 번째 탐색, 찾는 숫자 89576 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 33164 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 36588 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 28173 탐색+삭제 시간: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
     "t = binary_search_tree()\n",
-    "for num in [5,6,9,8,10,7,4,1,3,2]:\n",
-    "    t.insert(num)\n"
+    "\n",
+    "NUM = 1000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.insert(num)\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.height())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.delete_value(randNum)\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 트리 생성 시간:  0.0563962459564209\n",
+      "1 번째 트리 높이:  33\n",
+      "1 - 1 번째 탐색, 찾는 숫자 49053 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 75438 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 66079 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 59887 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 95666 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  0.053913116455078125\n",
+      "2 번째 트리 높이:  34\n",
+      "2 - 1 번째 탐색, 찾는 숫자 93211 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 4107 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 93370 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 13902 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 5969 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  0.0624852180480957\n",
+      "3 번째 트리 높이:  35\n",
+      "3 - 1 번째 탐색, 찾는 숫자 67536 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 13756 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 58412 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 83659 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 90192 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  0.3898756504058838\n",
+      "4 번째 트리 높이:  35\n",
+      "4 - 1 번째 탐색, 찾는 숫자 79821 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 74250 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 18001 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 91063 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 39924 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  0.0747995376586914\n",
+      "5 번째 트리 높이:  36\n",
+      "5 - 1 번째 탐색, 찾는 숫자 35897 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 59560 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 48965 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 19352 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 6172 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  0.08140707015991211\n",
+      "6 번째 트리 높이:  36\n",
+      "6 - 1 번째 탐색, 찾는 숫자 71727 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 17921 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 43294 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 61307 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 47847 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  0.07878994941711426\n",
+      "7 번째 트리 높이:  36\n",
+      "7 - 1 번째 탐색, 찾는 숫자 27252 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 61112 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 89980 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 85198 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 71458 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  0.10970902442932129\n",
+      "8 번째 트리 높이:  37\n",
+      "8 - 1 번째 탐색, 찾는 숫자 95771 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 36529 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 77253 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 82297 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 18790 탐색+삭제 시간: 0.000997781753540039\n",
+      "\n",
+      "9 번째 트리 생성 시간:  0.0827782154083252\n",
+      "9 번째 트리 높이:  37\n",
+      "9 - 1 번째 탐색, 찾는 숫자 40747 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 65183 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 66845 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 59191 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 68191 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  0.08992528915405273\n",
+      "10 번째 트리 높이:  38\n",
+      "10 - 1 번째 탐색, 찾는 숫자 50965 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 36195 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 92096 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 64933 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 74386 탐색+삭제 시간: 0.0\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "t.height()"
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "t = binary_search_tree()\n",
+    "\n",
+    "NUM = 10000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.insert(num)\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.height())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.delete_value(randNum)\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 트리 생성 시간:  0.8652644157409668\n",
+      "1 번째 트리 높이:  37\n",
+      "1 - 1 번째 탐색, 찾는 숫자 84781 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 61715 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 327 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 42186 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 98768 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  0.8491151332855225\n",
+      "2 번째 트리 높이:  38\n",
+      "2 - 1 번째 탐색, 찾는 숫자 85888 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 43395 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 80133 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 24936 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 80625 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  0.8016753196716309\n",
+      "3 번째 트리 높이:  39\n",
+      "3 - 1 번째 탐색, 찾는 숫자 26819 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 49404 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 12200 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 45638 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 52672 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  0.8300931453704834\n",
+      "4 번째 트리 높이:  39\n",
+      "4 - 1 번째 탐색, 찾는 숫자 91909 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 45372 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 50464 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 15965 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 47209 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  0.8680708408355713\n",
+      "5 번째 트리 높이:  39\n",
+      "5 - 1 번째 탐색, 찾는 숫자 49312 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 68990 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 54647 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 98396 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 34266 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  0.7379322052001953\n",
+      "6 번째 트리 높이:  39\n",
+      "6 - 1 번째 탐색, 찾는 숫자 22256 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 21267 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 16771 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 13743 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 50438 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  0.7206971645355225\n",
+      "7 번째 트리 높이:  39\n",
+      "7 - 1 번째 탐색, 찾는 숫자 18740 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 76871 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 71326 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 66060 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 63968 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  0.8558270931243896\n",
+      "8 번째 트리 높이:  39\n",
+      "8 - 1 번째 탐색, 찾는 숫자 70224 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 68714 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 90079 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 64119 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 51414 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "9 번째 트리 생성 시간:  0.7322254180908203\n",
+      "9 번째 트리 높이:  39\n",
+      "9 - 1 번째 탐색, 찾는 숫자 6277 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 337 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 6029 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 78152 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 48102 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  0.8503637313842773\n",
+      "10 번째 트리 높이:  39\n",
+      "10 - 1 번째 탐색, 찾는 숫자 15259 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 34824 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 28507 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 89157 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 37732 탐색+삭제 시간: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "t = binary_search_tree()\n",
+    "\n",
+    "NUM = 100000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.insert(num)\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.height())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.delete_value(randNum)\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 트리 생성 시간:  8.878143310546875\n",
+      "1 번째 트리 높이:  41\n",
+      "1 - 1 번째 탐색, 찾는 숫자 94791 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 92293 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 958 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 19922 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 85973 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  8.032771348953247\n",
+      "2 번째 트리 높이:  41\n",
+      "2 - 1 번째 탐색, 찾는 숫자 5851 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 71309 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 19866 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 42171 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 29772 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  8.066072702407837\n",
+      "3 번째 트리 높이:  41\n",
+      "3 - 1 번째 탐색, 찾는 숫자 27154 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 36621 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 33440 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 34651 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 68742 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  8.318702936172485\n",
+      "4 번째 트리 높이:  41\n",
+      "4 - 1 번째 탐색, 찾는 숫자 74691 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 9178 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 24288 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 9784 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 40800 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  8.095025539398193\n",
+      "5 번째 트리 높이:  41\n",
+      "5 - 1 번째 탐색, 찾는 숫자 60163 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 97189 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 22472 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 15695 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 83261 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  7.7186408042907715\n",
+      "6 번째 트리 높이:  41\n",
+      "6 - 1 번째 탐색, 찾는 숫자 69263 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 8252 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 47277 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 41963 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 97909 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  7.96574068069458\n",
+      "7 번째 트리 높이:  41\n",
+      "7 - 1 번째 탐색, 찾는 숫자 58377 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 43751 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 74303 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 35261 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 84376 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  8.250338077545166\n",
+      "8 번째 트리 높이:  41\n",
+      "8 - 1 번째 탐색, 찾는 숫자 63874 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 42502 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 24583 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 26654 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 28832 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "9 번째 트리 생성 시간:  7.639156103134155\n",
+      "9 번째 트리 높이:  41\n",
+      "9 - 1 번째 탐색, 찾는 숫자 77783 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 40204 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 30286 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 5537 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 69152 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  7.791452646255493\n",
+      "10 번째 트리 높이:  41\n",
+      "10 - 1 번째 탐색, 찾는 숫자 59852 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 82390 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 78482 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 56744 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 92633 탐색+삭제 시간: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "t = binary_search_tree()\n",
+    "\n",
+    "NUM = 1000000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.insert(num)\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.height())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.delete_value(randNum)\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
    ]
   }
  ],
