--- a/MakeRand.ipynb
+++ b/MakeRand.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "for i in range(3):\n",
-    "    f = open(\"1000_\"+str(i)+\".txt\",'w')\n",
+    "for i in range(10):\n",
+    "    f = open(\"1000000_\"+str(i)+\".txt\",'w')\n",
     "\n",
-    "    for j in range(1000):\n",
+    "    for j in range(1000000):\n",
     "        f.write(str(np.random.randint(100000))+\"\\n\")\n",
     "    \n",
     "    f.close()"
