--- a/RB.ipynb
+++ b/RB.ipynb
@@ -257,62 +257,434 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = rb_tree()\n",
-    "for i in range(0,10):\n",
-    "    t.rb_insert(Node(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   \t   \t   \t   \t   \t(None, 'black')\n",
-      "   \t   \t   \t   \t(9, 'red')\n",
-      "   \t   \t   \t   \t   \t(None, 'black')\n",
-      "   \t   \t   \t(8, 'black')\n",
-      "   \t   \t   \t   \t(None, 'black')\n",
-      "   \t   \t(7, 'red')\n",
-      "   \t   \t   \t   \t(None, 'black')\n",
-      "   \t   \t   \t(6, 'black')\n",
-      "   \t   \t   \t   \t(None, 'black')\n",
-      "   \t(5, 'black')\n",
-      "   \t   \t   \t(None, 'black')\n",
-      "   \t   \t(4, 'black')\n",
-      "   \t   \t   \t(None, 'black')\n",
-      "(3, 'black')\n",
-      "   \t   \t   \t(None, 'black')\n",
-      "   \t   \t(2, 'black')\n",
-      "   \t   \t   \t(None, 'black')\n",
-      "   \t(1, 'black')\n",
-      "   \t   \t   \t(None, 'black')\n",
-      "   \t   \t(0, 'black')\n",
-      "   \t   \t   \t(None, 'black')\n"
+      "1 번째 트리 생성 시간:  0.011946678161621094\n",
+      "1 번째 트리 높이:  6\n",
+      "1 - 1 번째 탐색, 찾는 숫자 63441 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 19166 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 26951 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 61414 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 54634 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  0.005982875823974609\n",
+      "2 번째 트리 높이:  7\n",
+      "2 - 1 번째 탐색, 찾는 숫자 32971 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 74230 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 14521 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 60898 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 52123 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  0.004031658172607422\n",
+      "3 번째 트리 높이:  7\n",
+      "3 - 1 번째 탐색, 찾는 숫자 68065 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 23708 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 17938 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 68385 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 90711 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  0.0039882659912109375\n",
+      "4 번째 트리 높이:  8\n",
+      "4 - 1 번째 탐색, 찾는 숫자 73563 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 96839 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 17096 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 20864 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 87413 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  0.004029273986816406\n",
+      "5 번째 트리 높이:  8\n",
+      "5 - 1 번째 탐색, 찾는 숫자 39829 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 64198 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 16342 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 41661 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 94980 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  0.004033088684082031\n",
+      "6 번째 트리 높이:  8\n",
+      "6 - 1 번째 탐색, 찾는 숫자 87129 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 40735 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 40246 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 74747 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 1090 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  0.0039997100830078125\n",
+      "7 번째 트리 높이:  8\n",
+      "7 - 1 번째 탐색, 찾는 숫자 59544 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 40693 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 32659 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 10245 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 42135 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  0.002408266067504883\n",
+      "8 번째 트리 높이:  8\n",
+      "8 - 1 번째 탐색, 찾는 숫자 48188 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 15963 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 39541 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 25653 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 40806 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "9 번째 트리 생성 시간:  0.0\n",
+      "9 번째 트리 높이:  8\n",
+      "9 - 1 번째 탐색, 찾는 숫자 99816 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 46672 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 6507 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 7262 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 14359 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  0.04689431190490723\n",
+      "10 번째 트리 높이:  8\n",
+      "10 - 1 번째 탐색, 찾는 숫자 7378 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 22063 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 58145 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 67379 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 66452 탐색+삭제 시간: 0.0\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "t.print(t.get_root(),0)\n",
-    "t.rb_bh()"
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "t = rb_tree()\n",
+    "\n",
+    "NUM = 1000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.rb_insert(Node(num))\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.rb_bh())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.rb_delete(t.search(t.get_root(),randNum))\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 트리 생성 시간:  0.04890561103820801\n",
+      "1 번째 트리 높이:  8\n",
+      "1 - 1 번째 탐색, 찾는 숫자 21038 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 47188 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 37187 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 84585 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 86084 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  0.033330678939819336\n",
+      "2 번째 트리 높이:  9\n",
+      "2 - 1 번째 탐색, 찾는 숫자 5066 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 20117 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 8799 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 32990 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 19930 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  0.04432249069213867\n",
+      "3 번째 트리 높이:  9\n",
+      "3 - 1 번째 탐색, 찾는 숫자 48107 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 38032 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 56242 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 27883 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 14257 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  0.06247687339782715\n",
+      "4 번째 트리 높이:  10\n",
+      "4 - 1 번째 탐색, 찾는 숫자 42238 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 89478 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 44632 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 27584 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 87720 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  0.1286606788635254\n",
+      "5 번째 트리 높이:  10\n",
+      "5 - 1 번째 탐색, 찾는 숫자 33303 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 71911 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 99044 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 32466 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 74789 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  0.06786084175109863\n",
+      "6 번째 트리 높이:  10\n",
+      "6 - 1 번째 탐색, 찾는 숫자 74771 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 32199 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 30894 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 33008 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 24639 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  0.08477997779846191\n",
+      "7 번째 트리 높이:  10\n",
+      "7 - 1 번째 탐색, 찾는 숫자 48283 탐색+삭제 시간: 0.0009481906890869141\n",
+      "7 - 2 번째 탐색, 찾는 숫자 48420 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 87602 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 69897 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 78354 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  0.0758063793182373\n",
+      "8 번째 트리 높이:  10\n",
+      "8 - 1 번째 탐색, 찾는 숫자 40171 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 60711 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 51475 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 60004 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 1103 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "9 번째 트리 생성 시간:  0.05394554138183594\n",
+      "9 번째 트리 높이:  10\n",
+      "9 - 1 번째 탐색, 찾는 숫자 63462 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 49074 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 12292 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 72718 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 32751 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  0.18225812911987305\n",
+      "10 번째 트리 높이:  11\n",
+      "10 - 1 번째 탐색, 찾는 숫자 62253 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 28778 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 92447 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 57534 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 23329 탐색+삭제 시간: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "t = rb_tree()\n",
+    "\n",
+    "NUM = 10000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.rb_insert(Node(num))\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.rb_bh())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.rb_delete(t.search(t.get_root(),randNum))\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 트리 생성 시간:  0.956899881362915\n",
+      "1 번째 트리 높이:  11\n",
+      "1 - 1 번째 탐색, 찾는 숫자 75381 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 87479 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 61297 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 7745 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 40458 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  1.2141356468200684\n",
+      "2 번째 트리 높이:  11\n",
+      "2 - 1 번째 탐색, 찾는 숫자 98521 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 22375 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 28893 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 22213 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 98306 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  1.1514194011688232\n",
+      "3 번째 트리 높이:  11\n",
+      "3 - 1 번째 탐색, 찾는 숫자 38800 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 50933 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 43607 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 74878 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 43915 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  1.8972804546356201\n",
+      "4 번째 트리 높이:  12\n",
+      "4 - 1 번째 탐색, 찾는 숫자 88918 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 63282 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 9459 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 34361 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 60631 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  1.0277457237243652\n",
+      "5 번째 트리 높이:  12\n",
+      "5 - 1 번째 탐색, 찾는 숫자 91682 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 21510 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 97427 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 35618 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 45603 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  1.8119778633117676\n",
+      "6 번째 트리 높이:  12\n",
+      "6 - 1 번째 탐색, 찾는 숫자 14117 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 91877 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 75991 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 30212 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 40614 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  2.0711350440979004\n",
+      "7 번째 트리 높이:  12\n",
+      "7 - 1 번째 탐색, 찾는 숫자 8357 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 44966 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 55464 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 41261 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 94063 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  1.0147438049316406\n",
+      "8 번째 트리 높이:  12\n",
+      "8 - 1 번째 탐색, 찾는 숫자 43277 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 6203 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 36907 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 44244 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 28808 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "9 번째 트리 생성 시간:  2.415008068084717\n",
+      "9 번째 트리 높이:  13\n",
+      "9 - 1 번째 탐색, 찾는 숫자 44051 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 90421 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 55288 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 12891 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 38855 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  1.0917398929595947\n",
+      "10 번째 트리 높이:  13\n",
+      "10 - 1 번째 탐색, 찾는 숫자 71452 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 94416 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 93356 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 99618 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 66409 탐색+삭제 시간: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "t = rb_tree()\n",
+    "\n",
+    "NUM = 100000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.rb_insert(Node(num))\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.rb_bh())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.rb_delete(t.search(t.get_root(),randNum))\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 트리 생성 시간:  19.01984715461731\n",
+      "1 번째 트리 높이:  13\n",
+      "1 - 1 번째 탐색, 찾는 숫자 47079 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 2636 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 21711 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 14606 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 25634 탐색+삭제 시간: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "t = rb_tree()\n",
+    "\n",
+    "NUM = 1000000\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    for num in nums:\n",
+    "        t.rb_insert(Node(num))\n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    print(i+1,\"번째 트리 높이: \",t.rb_bh())\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.rb_delete(t.search(t.get_root(),randNum))\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
