--- a/B-Tree.ipynb
+++ b/B-Tree.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Level  0  -->  2: (2, 6) (5, 10) \n",
-      "Level  1  -->  2: (0, 0) (1, 1) \n",
-      "Level  1  -->  2: (3, 8) (4, 13) \n",
-      "Level  1  -->  4: (6, 15) (7, 24) (8, 18) (9, 19) \n",
-      "\n",
-      "Key 6 deleted!\n",
-      "Level  0  -->  2: (2, 6) (5, 10) \n",
-      "Level  1  -->  2: (0, 0) (1, 1) \n",
-      "Level  1  -->  2: (3, 8) (4, 13) \n",
-      "Level  1  -->  3: (7, 24) (8, 18) (9, 19) \n",
-      "\n",
-      "Key 5 found!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import randint, randrange\n",
     "\n",
@@ -50,10 +31,7 @@
     "        :param x: Root node.\n",
     "        :param lvl: Current level.\n",
     "        \"\"\"\n",
-    "        print(\"Level \", lvl, \" --> \", len(x.keys), end=\": \")\n",
-    "        for i in x.keys:\n",
-    "            print(i, end=\" \")\n",
-    "        print()\n",
+    "        print(lvl,\" \")\n",
     "        lvl += 1\n",
     "        if len(x.children) > 0:\n",
     "            for i in x.children:\n",
@@ -306,12 +284,75 @@
     "            x.keys[i - 1] = lsNode.keys.pop()\n",
     "            if len(lsNode.children) > 0:\n",
     "                cNode.children.insert(0, lsNode.children.pop())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 번째 트리 생성 시간:  0.004544973373413086\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'printf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-56d31e02e013>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"번째 트리 생성 시간: \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprintTree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-12-91a4cfd1997b>\u001b[0m in \u001b[0;36mprintTree\u001b[1;34m(self, x, lvl)\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;33m:\u001b[0m\u001b[0mparam\u001b[0m \u001b[0mlvl\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mCurrent\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \"\"\"\n\u001b[1;32m---> 26\u001b[1;33m         \u001b[0mprintf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlvl\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m         \u001b[0mlvl\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'printf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
     "\n",
+    "t = BTree(5)\n",
     "\n",
-    "# The main function\n",
-    "def main():\n",
-    "    B = BTree(3)\n",
+    "NUM = 1000\n",
     "\n",
+    "for i in range(10):\n",
+    "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
+    "    nums = []\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        nums.append(int(line))\n",
+    "\n",
+    "    start = time.time()\n",
+    "    \n",
+    "    for i in range(NUM):\n",
+    "        t.insert((i, nums[i]))\n",
+    "    \n",
+    "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
+    "    t.printTree(t.root)\n",
+    "    print()\n",
+    "    \n",
+    "    for j in range(5):\n",
+    "        start = time.time()\n",
+    "        randNum = nums[np.random.randint(NUM)]\n",
+    "        t.delete(t.root,(randNum,))\n",
+    "        print(i+1,\"-\",j+1,\"번째 탐색, 찾는 숫자\",randNum,\"탐색+삭제 시간:\",time.time() - start)\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    # Insert\n",
     "    customNo = 10\n",
     "    for i in range(customNo):\n",
@@ -334,18 +375,8 @@
     "    else:\n",
     "        print(\"Key {} not found!\".format(toSearch))\n",
     "\n",
-    "\n",
-    "# Program starts here\n",
-    "if __name__ == '__main__':\n",
-    "    main()"
+    "#--------------------------------------------------"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
